--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "KillzN",
+    "name": "𝗕𝗶𝗯𝗯𝗹𝗲 - 𝗕𝗼𝘁",
     "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
     "repository": "https://chat.whatsapp.com/FFB0fgdK3IP4ZEmZ8jF1CC",
-    "logo": "https://i.ibb.co/93QWPfN/KILLZN-min.png"
+    "logo": "https://i.ibb.co/93QWPfN/𝗕𝗶𝗯𝗯𝗹𝗲 - 𝗕𝗼𝘁-min.png"
   }
